--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1180,7 +1180,7 @@ arb:
     entries: "السجلات"
     entries_to_point: "اعداد المدخلات"
     # equipment_evaluated_cost: "Coût équipements"
-    # equipments: "Equipements"
+    # equipments: "Équipements"
     error_no_file: "عدم توفر المساعدة في هذا الجزء من الطلب (%{article}).لم يتم كتابة التعليمات حتى الان.يمكنك زيارة موقعنا الالكتروني للمزيد من الاستفسار."
     # error_sale_already_paid: "La vente a déjà été payée en totalité"
     errors_explanation: "هنالك أخطاء في الملف. اذا لم تقم بتصحيحها فان خطوط الاخطاء لن تأخذ بعين الاعتبار اثناء الاستيراد"
