--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1098,7 +1098,7 @@ fra:
     entries: "Écritures"
     entries_to_point: "Écritures à pointer"
     equipment_evaluated_cost: "Coût équipements"
-    equipments: "Equipements"
+    equipments: "Équipements"
     error_no_file: "Aucune aide n’est disponible pour cette partie de l’application (%{article}). L’aide n’a pas encore été rédigée. Vous pouvez consulter le site en ligne pour plus d’informations."
     error_sale_already_paid: "La vente a déjà été payée en totalité"
     errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
