--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -965,7 +965,7 @@ jpn:
     # entries: "Écritures"
     # entries_to_point: "Écritures à pointer"
     # equipment_evaluated_cost: "Coût équipements"
-    # equipments: "Equipements"
+    # equipments: "Équipements"
     error_no_file: "ページ(%{article})はありません。"
     # error_sale_already_paid: "La vente a déjà été payée en totalité"
     # errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
