--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -78,7 +78,7 @@ spa:
         # deductible_vat: "Taxes sur le chiffre d’affaires deductibles"
         # depreciations_inputations_expenses: "Dotations aux amortissements et aux provisions"
         # discount_from_cooperatives: "Ristournes percues des cooperatives agricoles"
-        # electricity_expenses: "Electricité"
+        # electricity_expenses: "Électricité"
         # end_products_stock: "Stock de produits finis et intermédiaires"
         # equipment_asset_depreciations: "Ammortissements des installations techniques, matériels et outillage"
         # equipment_assets: "Matériels"
@@ -89,7 +89,7 @@ spa:
         # expenses: "Comptes de charges"
         # exploitation_expenses_transfers: "Transferts de expenses d’exploitation"
         # exploitation_subsidies_and_compensations: "Indémnités et subventions d’exploitation"
-        # external_staff_expenses: "Personnel exterieur a l’entreprise"
+        # external_staff_expenses: "Personnel extérieur à l’entreprise"
         # fertilizer_expenses: "Engrais et amendements"
         # fertilizer_stock: "Stock d’engrais et amendements"
         # fill_up_price_revenues: "Compléments de prix et primes sur produits vendus"
@@ -123,7 +123,7 @@ spa:
         # land_parcel_rent_expenses: "Fermages et loyers du foncier"
         # land_parcel_sell_revenues: "Immobilisations corporelles (hors biens vivants)"
         # legal_reserves: "Réserve légale"
-        # little_office_equipment_expenses: "Fournitures d’entretien et de petits equipements"
+        # little_office_equipment_expenses: "Fournitures d’entretien et de petits équipements"
         # livestock_feed_matter_expenses: "Aliments du betail"
         # livestock_feed_stock: "Stock d’aliment du bétail"
         # locked_associated_accounts: "Associes comptes courants - comptes bloqués"
@@ -225,7 +225,7 @@ spa:
         # transport_vehicle_assets: "Matériel de transport"
         # usual_associated_accounts: "Associes comptes courants - comptes courants"
         # usual_bank_overdraft: "Concours bancaires courants"
-        # vat: "Etat - Taxes sur le chiffre d’affaire"
+        # vat: "État - Taxes sur le chiffre d’affaire"
         # vegetals_productions_expenses: "Achats pour productions végétales"
         # veterinary_fees_expenses: "Honoraires veterinaires"
         # waiting_vat: "Taxes sur le chiffres d’affaires à régulariser ou en attente"
@@ -238,7 +238,7 @@ spa:
       items:
         # accountancy: "Comptabilité"
         # animal_farming: "Élevage bovins"
-        # cattle_farming: "Elevage"
+        # cattle_farming: "Élevage"
         # exploitation: "Exploitation"
         # fallow_land: "Jachère"
         # fish_farming: "Aquaculture"
@@ -885,7 +885,7 @@ spa:
       attributes: #?
       items:
         # accountancy: "Comptabilité"
-        # animal_farming: "Elevage"
+        # animal_farming: "Élevage"
         # exploitation: "Exploitation"
         # feeding: "Alimentation animale"
         # health: "Santé - Hygiène"
@@ -1242,6 +1242,7 @@ spa:
           # cow: "Vache"
           # credit_card: "Carte de crédit"
           # desktop: "Ordinateur"
+          # drop: "Goutte"
           # food: "Aliment"
           # gift: "Cadeau"
           # group: "Groupe"
@@ -1351,7 +1352,9 @@ spa:
         # corn_grain: "Graine de maïs"
         # cow_milk: "Lait de vache"
         # cultivable_land_parcel: "Parcelle culturale"
+        # diesel: "Diesel"
         # durum_wheat_crop: "Culture de blé dur"
+        # electricity: "Électricité"
         # equipment: "Équipement"
         # ewe_milk: "Lait de brebis"
         # fallow_crop: "Jachère"
@@ -1359,6 +1362,8 @@ spa:
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
         # forager: "Ensileuse"
+        # gas: "Gaz"
+        # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
         # grass: "Herbe"
         # hard_wheat_grain: "Graine de blé dur"
@@ -1393,8 +1398,8 @@ spa:
         # spelt_wheat_crop: "Culture d’épeautre"
         # sprayer: "Pulvérisateur"
         # spread_renting: "Location d’épandeur"
-        # spreader: "Epandeur à engrais"
-        # spreader_trailer: "Epandeur à fumier"
+        # spreader: "Épandeur à engrais"
+        # spreader_trailer: "Épandeur à fumier"
         # sunflower_crop: "Culture de tournesol"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
@@ -1436,6 +1441,7 @@ spa:
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
         # cultivable_land_parcel: "Parcelle culturale"
+        # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Zone de stockage des équipements"
         # female_adult_cattle_herd: "Troupeau de vaches"
@@ -1443,7 +1449,9 @@ spa:
         # female_young_cow: "Génisse"
         # food: "Aliment"
         # forager: "Ensileuse"
+        # fuel: "Carburant"
         # fungicide: "Fongicide"
+        # gas: "Gaz"
         # grain: "Graine"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
@@ -1467,7 +1475,7 @@ spa:
         # sprayer: "Pulvérisateur"
         # spread_renting: "Location d’épandeur"
         # spreader: "Épandeur à engrais"
-        # spreader_trailer: "Epandeur à fumier"
+        # spreader_trailer: "Épandeur à fumier"
         # straw: "Paille"
         # technician: "Technicien"
         # tractor: "Tracteur"
@@ -1522,11 +1530,13 @@ spa:
         # hectoliter: "Hectolitre"
         # hour: "Heure"
         # hundred: "Centaine"
+        # joule: "Joule"
         # kelvin: "Kelvin"
         # kilogram: "kilogramme"
         # kilogram_per_liter: "Kilogramme par litre"
         # kilometer: "Kilomètre"
         # kilowatt: "Kilowatt"
+        # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
@@ -1564,84 +1574,88 @@ spa:
         # itis-tsn: "Identifiant ITIS"
       choices: #?
       items:
-        # additive: "Additifs"
-        # anas: "Palmipèdes"
-        # animal: "Animaux"
-        # animal_group: "Troupeaux"
-        # animal_medicine: "Médicaments vétérinaires"
-        # antiseptic: "Antiseptiques"
+        # additive: "Additif"
+        # anas: "Palmipède"
+        # animal: "Animal"
+        # animal_group: "Troupeau"
+        # animal_medicine: "Médicament vétérinaire"
+        # antiseptic: "Antiseptique"
         # apache: "Blé Apache"
         # apis: "Apidés"
         # asteraceae: "Astéracée"
-        # baler: "Botteleuses"
-        # bioproduct: "Produits vivants"
-        # bos: "Bovins"
-        # building: "Bâtiments"
-        # building_division: "Pièces de bâtiments"
+        # aves: "Oiseau"
+        # baler: "Botteleuse"
+        # bioproduct: "Produit vivant"
+        # bos: "Bovin"
+        # building: "Bâtiment"
+        # building_division: "Pièce de bâtiment"
         # caphorn: "Blé Caphorn"
-        # capra: "Caprins"
+        # capra: "Caprin"
         # cultivable_land_parcel: "Parcelle culturale"
-        # disinfectant: "Désinfectants"
+        # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
-        # equipment: "Equipements"
-        # forager: "Ensileuses"
-        # fungicide: "Produits Fongicides"
-        # fungus: "Champignons"
-        # gallus: "Galinacées"
-        # grain: "Grains"
+        # equipment: "Équipement"
+        # forager: "Ensileuse"
+        # fungicide: "Produit fongicide"
+        # fungus: "Champignon"
+        # gallus: "Galinacée"
+        # grain: "Grain"
         # helianthus: "Tournesol"
-        # herbicide: "Produits herbicides"
+        # herbicide: "Produit herbicide"
         # hordeum: "Orge"
         # immatter: "Immatérialisable"
-        # insecta: "Insectes"
-        # insecticide: "Produits insecticides"
+        # insecta: "Insecte"
+        # insecticide: "Produit insecticide"
         # land_parcel: "Parcelle physique"
-        # land_parcel_cluster: "Îlots"
+        # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
-        # lepus: "Lagomorphes"
-        # mammalia: "Mammifères"
-        # manure: "Fumiers"
+        # lepus: "Lagomorphe"
+        # mammalia: "Mammifère"
+        # manure: "Fumier"
         # matter: "Matérialisable"
-        # meat: "Viandes"
-        # medicine: "Médicaments"
+        # meat: "Viande"
+        # medicine: "Médicament"
         # milk: "Lait"
-        # mineral_food: "Aliments minéraux"
-        # mineral_matter: "Matières minérales"
-        # mollusca: "Mollusques"
-        # molluscicide: "Produits molluscicides"
-        # mower: "Faucheuses"
-        # organic_matter: "Matières organiques"
-        # ovis: "Ovins"
-        # plant: "Végétaux"
+        # mineral_food: "Aliment minéral"
+        # mineral_matter: "Matière minérale"
+        # mollusca: "Mollusque"
+        # molluscicide: "Produit molluscicide"
+        # mower: "Faucheuse"
+        # organic_matter: "Matière organique"
+        # ovis: "Ovin"
+        # plant: "Végétal"
         # plant_food: "Nourriture végétale"
-        # plant_medicine: "Produits phytosanitaires"
-        # plower: "Charrues"
-        # poa: "Prairies"
+        # plant_medicine: "Produit phytosanitaire"
+        # plower: "Charrue"
+        # poa: "Prairie"
         # poaceae: "Graminée"
-        # product: "Produits"
-        # product_group: "Groupe de produits"
+        # product: "Produit"
+        # product_group: "Groupe de produit"
         # property_title: "Titre de propriété"
-        # salmo: "Salmonidés"
+        # salmo: "Salmonidé"
         # salt: "Sel"
-        # seed: "Semences"
-        # service: "Services"
+        # sand: "Sable"
+        # seed: "Semence"
+        # service: "Service"
         # settlement: "Agencement"
         # sorghum: "Sorgho"
-        # sower: "Semoirs"
-        # sprayer: "Pulvérisateurs"
-        # spreader: "Epandeurs"
+        # sower: "Semoir"
+        # sprayer: "Pulvérisateur"
+        # spreader: "Épandeur"
         # straw: "Pailles"
-        # sub_zone: "Sous zones"
-        # sus: "Porcins"
+        # sub_zone: "Sous zone"
+        # sus: "Porcin"
         # tank: "Réservoir"
-        # tractor: "Tracteurs"
-        # trailer: "Remorques"
+        # tractor: "Tracteur"
+        # trailer: "Remorque"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
-        # triticum_spelta: "Epeautre"
-        # worker: "Travailleurs"
+        # triticum_spelta: "Épeautre"
+        # water: "Eau"
+        # worker: "Travailleur"
         # zea: "Maïs"
         # zone: "Zone physique"
+        # zone_property_title: "Titre de propriété terrienne"
       # name: "Variétés"
     varieties-animal: #?
     varieties-asteraceae: #?
