Enhances demo data and translates a part of product management

--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -693,7 +693,7 @@ fra:
         hundred: "Centaine"
         joule: "Joule"
         kelvin: "Kelvin"
-        kilogram: "kilogramme"
+        kilogram: "Kilogramme"
         kilogram_per_liter: "Kilogramme par litre"
         kilometer: "Kilomètre"
         kilowatt: "Kilowatt"
@@ -1479,7 +1479,7 @@ fra:
         hundred: "Centaine"
         joule: "Joule"
         kelvin: "Kelvin"
-        kilogram: "kilogramme"
+        kilogram: "Kilogramme"
         kilogram_per_liter: "Kilogramme par litre"
         kilometer: "Kilomètre"
         kilowatt: "Kilowatt"
@@ -1513,6 +1513,89 @@ fra:
         unity_per_kilogram: "Unité par kilogramme"
         unity_per_liter: "Unité par litre"
         watt: "Watt"
+      derivative_of:
+        additive: "Additif"
+        anas: "Palmipède"
+        animal: "Animal"
+        animal_group: "Troupeau"
+        animal_medicine: "Médicament vétérinaire"
+        antiseptic: "Antiseptique"
+        apache: "Blé Apache"
+        apis: "Apidés"
+        asteraceae: "Astéracée"
+        aves: "Oiseau"
+        baler: "Botteleuse"
+        bioproduct: "Produit vivant"
+        bos: "Bovin"
+        building: "Bâtiment"
+        building_division: "Pièce de bâtiment"
+        caphorn: "Blé Caphorn"
+        capra: "Caprin"
+        cultivable_land_parcel: "Parcelle culturale"
+        disinfectant: "Désinfectant"
+        easement: "Aménagement foncier"
+        equipment: "Équipement"
+        forager: "Ensileuse"
+        fungicide: "Produit fongicide"
+        fungus: "Champignon"
+        gallus: "Galinacée"
+        grain: "Grain"
+        helianthus: "Tournesol"
+        herbicide: "Produit herbicide"
+        hordeum: "Orge"
+        immatter: "Immatérialisable"
+        insecta: "Insecte"
+        insecticide: "Produit insecticide"
+        land_parcel: "Parcelle physique"
+        land_parcel_cluster: "Îlot"
+        land_parcel_group: "Groupe de parcelles physiques"
+        lepus: "Lagomorphe"
+        mammalia: "Mammifère"
+        manure: "Fumier"
+        matter: "Matérialisable"
+        meat: "Viande"
+        medicine: "Médicament"
+        milk: "Lait"
+        mineral_food: "Aliment minéral"
+        mineral_matter: "Matière minérale"
+        mollusca: "Mollusque"
+        molluscicide: "Produit molluscicide"
+        mower: "Faucheuse"
+        organic_matter: "Matière organique"
+        ovis: "Ovin"
+        plant: "Végétal"
+        plant_food: "Nourriture végétale"
+        plant_medicine: "Produit phytosanitaire"
+        plower: "Charrue"
+        poa: "Prairie"
+        poaceae: "Graminée"
+        product: "Produit"
+        product_group: "Groupe de produit"
+        property_title: "Titre de propriété"
+        salmo: "Salmonidé"
+        salt: "Sel"
+        sand: "Sable"
+        seed: "Semence"
+        service: "Service"
+        settlement: "Agencement"
+        sorghum: "Sorgho"
+        sower: "Semoir"
+        sprayer: "Pulvérisateur"
+        spreader: "Épandeur"
+        straw: "Pailles"
+        sub_zone: "Sous zone"
+        sus: "Porcin"
+        tank: "Réservoir"
+        tractor: "Tracteur"
+        trailer: "Remorque"
+        triticum_aestivum: "Blé tendre"
+        triticum_durum: "Blé dur"
+        triticum_spelta: "Épeautre"
+        water: "Eau"
+        worker: "Travailleur"
+        zea: "Maïs"
+        zone: "Zone physique"
+        zone_property_title: "Titre de propriété terrienne"
       variety:
         additive: "Additif"
         anas: "Palmipède"
