--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -511,6 +511,23 @@ eng:
         celsius: "Celsius"
         square_meter: "Square meter"
         unity: "Unity"
+      derivative_of:
+        animal: "Animal"
+        bioproduct: "Bioproduct"
+        equipment: "Equipment"
+        fungus: "Fungus"
+        immatter: "Immatter"
+        matter: "Matter"
+        mineral_matter: "Mineral matter"
+        organic_matter: "Organic matter"
+        phytosanitary: "Phytosanitary"
+        plant: "Plant"
+        product: "Product"
+        product_group: "Product group"
+        property_title: "Property title"
+        service: "Service"
+        worker: "Worker"
+        zone: "Zone"
       variety:
         animal: "Animal"
         bioproduct: "Bioproduct"
