Makes incoming_deliveries recordable

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1179,7 +1179,7 @@ fra:
     indicator: "Indicateur"
     indicator_value: "Valeur de l'indicateur"
     indicators: "Indicateurs"
-    indicators_evolutions: "Evolutions des indicateurs"
+    indicators_evolutions: "Évolutions des indicateurs"
     inel_index: "Index génétique INEL"
     info: "Information\_: %{value}"
     infos: "Information générales"
@@ -1297,7 +1297,7 @@ fra:
     mode: "Mode"
     modes: "Modes"
     modules: "Modules"
-    month_period: "%{code} - %{month} %{year}"
+    month_period: "%{code} — %{month} %{year}"
     monthly: "Mensuelle"
     moved_on: "Fait le"
     movement: "Mouvements"
@@ -1402,9 +1402,9 @@ fra:
       unparted: "Non affectés"
       waiting: "À décaisser plus tard"
     overflow: "CREDIT OU EXCEDENT"
-    page_title: "%{company_code} - %{menu} - %{action}"
-    page_title_by_default: "Ekylibre - %{action}"
-    page_title_special: "%{company_code} - %{action}"
+    page_title: "%{company_code} · %{menu} · %{action}"
+    page_title_by_default: "Ekylibre · %{action}"
+    page_title_special: "%{company_code} · %{action}"
     paid_amount: "Montant réglé"
     paid_on: "Réglé le"
     parameters: "Paramètres"
@@ -1770,7 +1770,7 @@ fra:
     x_intervention_casts:
       one: "%{count} intervention"
       other: "%{count} interventions"
-      zero: "aucune intervention"
+      zero: "Aucune intervention"
     x_items_remain_on_y:
       one: "%{count} élément restant."
       other: "%{count} éléments non visibles. Affinez votre recherche."
