--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1119,7 +1119,7 @@ eng:
     indicator: "Indicators"
     # indicator_value: "Valeur de l'indicateur"
     indicators: "Indicators"
-    # indicators_evolutions: "Evolutions des indicateurs"
+    # indicators_evolutions: "Évolutions des indicateurs"
     # inel_index: "Index génétique INEL"
     info: "General parameters"
     infos: "Product and quantity"
@@ -1721,7 +1721,7 @@ eng:
     x_intervention_casts:
       # one: "%{count} intervention"
       # other: "%{count} interventions"
-      # zero: "aucune intervention"
+      # zero: "Aucune intervention"
     x_items_remain_on_y:
       # one: "%{count} élément restant."
       # other: "%{count} éléments non visibles. Affinez votre recherche."
