--- a/README.rdoc
+++ b/README.rdoc
@@ -86,9 +86,9 @@ Some additional tools are needed to manipulate some images of the project:
 
 == See also
 
-* Forum: https://www.ekylibre.org/forum
+* Forum: https://ekylibre.org/forum
 * Map: http://www.mindmeister.com/fr/233765234/ekylibre-1-0-2013
-* Official documentation: https://github.com/ekylibre/ekylibre-doc
+* Documentation: https://github.com/ekylibre/ekylibre-doc
 
 == License
 
